# loadmaxx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  loadtest_log.csv
src/: loader.rs  main.rs  stats.rs
