[package]
name = "loadmaxx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }       # async runtime
reqwest = { version = "0.12", features = ["rustls-tls"] } # HTTP client
clap = { version = "4", features = ["derive"] }       # CLI argument parsing
colored = "2"                                          # colored terminal output
chrono = "0.4"
